# csc305_spring2020

./: README.md
lectures/week_0/: 00_day_one.md  01_math.md  02_backwards_ray_tracing.md
lectures/week_0/code/: 02_backwards_ray_tracing.cpp
lectures/week_1/: 03_antialiasing.md  04_multisampling.md
lectures/week_2/: 05_perspective.md  06_viewing_system.md
lectures/week_3/: 07_theoretical_foundations.md  08_lights_and_materials.md
lectures/week_4/: 09_specular_reflection.md  10_shadows.md
lectures/week_5/: 12_review.md
lectures/week_6/: 13_graphics_pipeline.md  14_gpu.md
lectures/week_7/: 15_mvp_matrix.md  16_texture_pipeline.md  17_min_mag.md
lectures/week_8/: 18_scene_graph.md  19_bvh.md  20_grids.md
resources/: development.md  resources.md
resources/gl_tester/: CMakeLists.txt  main.cpp
